# chrome-history-mcp

./: README.md  pyproject.toml
src/chrome_history_mcp/: server.py
