[project]
name = "chrome-history-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.12.1",
    "pandas>=2.3.1",
    "ruff>=0.12.4",
]

[project.scripts]
chrome-history-mcp = "chrome_history_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"